# xdg

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml  docs.yml  openmc-test.yml
cmake/: XDGConfig.cmake.in  XDGConfigVersion.cmake.in
cmake/Modules/: FindLIBMESH.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  glossary.rst  index.rst
docs/api/: cpp_xdg.rst
docs/intro/: index.rst
docs/methods/: acceleration_data_structures.rst  design_philosophy.rst  element_search.rst  index.rst  primitive_intersection.rst  raytracing.rst
docs/usersguide/: index.rst  install.rst
docs/usersguide/formats/: index.rst  libmesh.rst  moab.rst
include/xdg/: bbox.h  bounding_functions.h  closest.h  config.h  constants.h  element_face_accessor.h  embree3.h  embree4.h  embree_interface.h  embree_ray_tracer.h  error.h  generic_types.h  geometry_data.h  hexahedron_contain.h  id_block_map.h  intersect_common.h  mesh_manager_interface.h  mesh_managers.h  metadata_interface.h  overlap.h  plucker.h  primitive_ref.h  progressBar.h  quadrilateral_intersection.h  ray.h  ray_tracers.h  ray_tracing_interface.h  shared_enums.h  tetrahedron_contain.h  timer.h  topology_interface.h  triangle_ref.h  vec3da.h  xdg.h
include/xdg/embree/: ray_tracer.h
include/xdg/geometry/: closest.h  dp_math.h  face_common.h  measure.h  plucker.h
include/xdg/gprt/: ray_tracer.h  sharedCode.h  shared_structs.h  vulkan_probe.h
include/xdg/libmesh/: mesh_manager.h
include/xdg/mfem/: mesh_manager.h
include/xdg/moab/: direct_access.h  mesh_manager.h  metadata.h  tag_conventions.h
include/xdg/testing/: mesh_mock.h  mesh_mocks.h  mocked_mesh.h
include/xdg/util/: linalg.h  progress_bars.h  rng.h  str_utils.h
include/xdg/vec3/: vec3.h  vec3da.h  vec3fa.h
scripts/: view_xml.py
src/: area.cpp  bounding_functions.cpp  closest.cpp  config.cpp  element_face_accessor.cpp  embree_ray_tracer.cpp  error.cpp  hexahedron_contain.cpp  intersect_common.cpp  mesh_manager_interface.cpp  overlap.cpp  plucker.cpp  quadrilateral_intersection.cpp  ray_tracing_interface.cpp  tetrahedron_contain.cpp  timer.cpp  topology_interface.cpp  triangle_intersect.cpp  triangle_ref.cpp  xdg.cpp
src/embree/: ray_tracer.cpp
src/geometry/: closest.cpp  measure.cpp  plucker.cpp
src/gprt/: dbl_deviceCode.slang  ray_tracer.cpp  sharedCode.h
src/libmesh/: mesh_manager.cpp
src/mfem/: mesh_manager.cpp
src/moab/: direct_access.cpp  mesh_manager.cpp  metadata.cpp  moab_direct_access.cpp
src/overlap_check/: overlap.cpp  progressBar.cpp
src/util/: str_utils.cpp
tests/: CMakeLists.txt  initialize.cpp  mesh_mock.h  mesh_mocks.h  mocked_mesh.h  particle_sim.h  test_bbox.cpp  test_boundary_faces.cpp  test_bvh.cpp  test_closest.cpp  test_config.cpp  test_cross_check.cpp  test_find_element.cpp  test_hex_containment.cpp  test_initialize.cpp  test_libmesh.cpp  test_main.cpp  test_measure.cpp  test_mesh_connectivity.cpp  test_mesh_internal.cpp  test_mesh_library_cross_check.cpp  test_mfem.cpp  test_moab.cpp  test_moab_transport.cpp  test_mocked_mesh.cpp  test_mocked_mesh_ray.cpp  test_no_geom.cpp  test_normal.cpp  test_occluded.cpp  test_overlap_check.cpp  test_point_in_volume.cpp  test_ray_duals.cpp  test_ray_fire.cpp  test_ray_tracer_cross_check.cpp  test_tally_segments.cpp  test_tet_containment.cpp  test_tet_intersection.cpp  test_tracks.cpp  test_walk_elements.cpp  test_xdg_interface.cpp  (+2 more)
tools/: CMakeLists.txt  find_volume.cpp  gprt_test.cpp  model_info.cpp  overlap.cpp  overlap.h  overlap_check.cpp  particle_sim.cpp  particle_sim.h  point_in_volume.cpp  ray_benchmark.cpp  ray_benchmark.h  ray_fire.cpp  segments.cpp  tally_segments.cpp  tally_segments.h  test_fp_miniapp.cpp  walk_elements.cpp  walk_elements.h
tools/gprt/: CMakeLists.txt  deviceCode.slang  gprt_test.cpp  xdg_gprt_renderer.cpp  xdg_gprt_renderer_deviceCode.slang  xdg_gprt_renderer_sharedCode.h
